<resources>
    <string name="app_name">Add Details</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email_address">Email_address</string>
    <string name="add_account">add account</string>
    <string name="password">Password</string>
    <string name="password_signup">Password :</string>
    <string name="email">Email :</string>
    <string name="add_your_profile_here">Add Your Profile Here</string>
    <string name="name">Name :</string>
    <string name="profession">Profession :</string>
    <string name="add_details">Add Details</string>
    <string name="next">Next</string>
    <string name="your_details_will_appear_here">Your details will appear here</string>
    <string name="get_details">get Details</string>
    <string name="languages">Languages</string>
    <string name="data_details">Data Details</string>
</resources>