<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".HomeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_your_profile_here"
        android:textColor="#111111"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/header"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textColor="#111111"
        android:layout_below="@+id/header"
        android:textStyle="bold"
        android:id="@+id/name"
        android:textSize="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:inputType="text"
        android:id="@+id/editName"
        android:layout_below="@+id/header"
        android:layout_toRightOf="@+id/name"
        android:layout_toEndOf="@+id/name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textColor="#111111"
        android:layout_below="@+id/name"
        android:textStyle="bold"
        android:id="@+id/email"
        android:textSize="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:inputType="textEmailAddress"
        android:id="@+id/editEmailAddDetails"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/email"
        android:layout_toEndOf="@+id/email" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/profession"
        android:textColor="#111111"
        android:layout_below="@+id/email"
        android:textStyle="bold"
        android:id="@+id/profession"
        android:textSize="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:inputType="text"
        android:id="@+id/editProfession"
        android:layout_below="@+id/email"
        android:layout_toRightOf="@+id/profession"
        android:layout_toEndOf="@+id/profession" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_details"
        android:padding="5dp"
        android:id="@+id/addDetails"
        android:textColor="#111111"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profession"
        android:layout_marginTop="30dp"/>

</RelativeLayout>